2011-02-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: tweak few tests on simple and parallel test drivers
	* tests/check-exported-srcdir.test: Improve heading comments.
	* tests/check-tests-in-builddir.test: Likewise.  Also, unset the
	`FOO_EXIT_STATUS' variable, so that any pre-existing value in the
	environment won't risk to interfere with the test.
	Suggestions by Ralf Wildenhues.

2011-02-01  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: more tests on simple and parallel test drivers
	* tests/parallel-tests-subdir.test: New test.
	* tests/check-exported-srcdir.test: Likewise.
	* tests/check-tests-in-builddir.test: Likewise.
	* tests/check-tests_environment.test: Likewise.
	* tests/Makefile.am (TESTS): Update.

2011-01-29  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failures in lflags*.test
	* tests/lflags.test: Remove 'LEX' from the environment, so
	that it won't be erroneously picked up by `make -e'.
	* tests/lflags2.test: Likewise.

2011-01-24  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: color-tests issues with parallel make
	* doc/automake.texi (Simple Tests): Document that automatic
	recognition of a capable terminal attached to stdout can fail
	with some make implementation when running in parallel mode,
	thus causing colored test output not to be automatically
	activated when it should.

2011-01-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	tests: avoid instspc.test failures due to make's whitespace trimming
	* tests/instspc.test: Prepend './' when passing the test
	characters, to avoid leading whitespace characters to be trimmed
	from macros set from environment variables.  Fixes testsuite
	failures with HP-UX, IRIX, and Tru64/OSF make.

2011-01-23  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: test semantics of "dummy" per-target flags
	* tests/specflg-dummy.test: New test, ensuring that even "dummy"
	per-target flags triggers the use of renamed objects.