@@ -1,3 +1,11 @@
+2011-04-24  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: fix spurious failure in a test on TESTS (VPATH-related)
+	* check-tests-in-builddir.test: When not using the parallel-tests
+	option, do not check that VPATH components are not present in the
+	displayed test name, since the simple-tests driver do not try to
+	strip them.
+
 2011-02-06  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: tweak few tests on simple and parallel test drivers
